@startuml

title __MODEL's Class Diagram__\n

  namespace de.vogella.algorithms.dijkstra.model {
    class de.vogella.algorithms.dijkstra.model.Edge {
        - id : String
        - weight : double
        + Edge()
        + getDestination()
        + getId()
        + getSource()
        + getWeight()
        + toString()
    }
  }
  

  namespace de.vogella.algorithms.dijkstra.model {
    class de.vogella.algorithms.dijkstra.model.Graph {
        - edges : List<IEdge>
        - vertexes : List<IVertex>
        + Graph()
        + getEdges()
        + getVertexes()
    }
  }
  

  namespace de.vogella.algorithms.dijkstra.model {
    interface de.vogella.algorithms.dijkstra.model.IEdge {
        {abstract} + getDestination()
        {abstract} + getId()
        {abstract} + getSource()
        {abstract} + getWeight()
    }
  }
  

  namespace de.vogella.algorithms.dijkstra.model {
    interface de.vogella.algorithms.dijkstra.model.IVertex {
        {abstract} + getId()
        {abstract} + getName()
    }
  }
  

  namespace de.vogella.algorithms.dijkstra.model {
    class de.vogella.algorithms.dijkstra.model.Vertex {
        - id : String
        - name : String
        + Vertex()
        + equals()
        + getId()
        + getName()
        + hashCode()
        + toString()
    }
  }
  

  de.vogella.algorithms.dijkstra.model.Edge .up.|> de.vogella.algorithms.dijkstra.model.IEdge
  de.vogella.algorithms.dijkstra.model.Edge o-- de.vogella.algorithms.dijkstra.model.IVertex : destination
  de.vogella.algorithms.dijkstra.model.Edge o-- de.vogella.algorithms.dijkstra.model.IVertex : source
  de.vogella.algorithms.dijkstra.model.Vertex .up.|> de.vogella.algorithms.dijkstra.model.IVertex


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
